src/main/java/com/example/catalogmanager/error/FaultDto.java
package com.example.catalogmanager.error;

public record FaultDto(String message, String reason) {}
